<resources>
    <string name="app_name">Share A Book</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="id_shareABook">Share-A-Book</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="id_loginButton">Log In</string>
    <string name="id_forgotPasswordButton">Forgot Password?</string>
    <string name="id_signUpButton">Sign Up</string>
    <string name="id_resetPasswordText">Enter your email address\nto reset your password.</string>
    <string name="id_resetPasswordButton">Reset Password</string>
    <string name="id_cancelButton">Cancel</string>
    <string name="id_backButton">Back</string>
    <string name="id_createAccountText">Create Account</string>
    <string name="id_firstNameText">First Name</string>
    <string name="id_lastNameText">Last Name</string>
    <string name="id_phoneNumberText">Phone Number</string>
    <string name="id_emailText">Email Address</string>
    <string name="id_passwordText">Password*</string>
    <string name="id_passwordConfirmationText">Confirmation</string>
    <string name="id_createAccountButton">Create Account</string>
    <string name="hint_passwordLength">Must be 6+ characters</string>
    <string name="id_accountInfoText">Edit Account</string>
    <string name="id_accountInfoFirstNameText">First Name</string>
    <string name="id_accountInfoLastNameText">Last Name</string>
    <string name="id_accountInfoPhoneNumberText">Phone Number</string>
    <string name="id_accountInfoEmailText">Email Address</string>
    <string name="id_accountInfoPasswordText">Password</string>
    <string name="id_accountInfoPasswordConfirmationText">Password Confirmation</string>
    <string name="id_updateAccountInfoButton">Update</string>
    <string name="menu_home">Home</string>
    <string name="menu_books">Books</string>
    <string name="menu_pending">Pending</string>
    <string name="menu_history">History</string>
    <string name="menu_listing">Listing</string>
    <string name="menu_account">Account</string>
    <string name="menu_login">Log In</string>
    <string name="menu_account_info">Edit Account</string>
    <string name="menu_logout">Log Out</string>
    <string name="menu_sign_up">Sign Up</string>
    <string name="no_account">No account yet?</string>
    <string name="create_one">Create one</string>
    <string name="logo">Logo</string>
    <string name="create">Create</string>
    <string name="title_activity_listing">ListingActivity</string>
    <string name="Add" />
    <string name="listing_books">Listing Books</string>
    <string name="registration">Registration</string>
    <string name="submit">Submit</string>
    <string name="add_book_transition">add_book_transition</string>
    <string name="add">Add</string>
    <string name="book_title">Title</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="author">Author</string>
    <string name="category">Category</string>
    <string name="posted_by">Posted By:</string>
    <string name="status">Status:</string>
    <string name="request_book">Request Book</string>
    <string name="book_info">Book Information</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="pending">Pending</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_book">Edit Book</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="tracking">Tracking</string>
    <string name="borrower">Borrower</string>
    <string name="lender">Lender</string>
    <string name="user_profile">User profile picture</string>
    <string name="request_pending_status">Request status:</string>
    <string name="accepted_icon">accepted icon</string>
    <string name="title_activity_cancel_book_request">CancelBookRequestActivity</string>
    <string name="cancel_book_request">Cancel Book Request</string>
    <string name="check_out">Check Out</string>
    <string name="email_to_lender">Email to lender</string>
    <string name="upload_profile_image">Upload profile image</string>
    <string name="history">History</string>
    <string name="history_status">History status:</string>
    <string name="add_book">Add Book</string>
    <string name="return_book">Return Book</string>
    <string name="request">Request</string>
    <string name="return_text">Return</string>
    <string name="confirm_returned">Confirm Returned</string>
</resources>
