<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id_shareABook" android:layout_marginTop="50dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:text="@string/id_shareABook" android:textSize="24sp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/id_loginEmail" android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/id_shareABook" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/hint_email"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/id_loginPassword" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/id_loginEmail" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/hint_password"/>
    <Button
            android:text="@string/id_loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id_loginButton" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/id_loginPassword" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <TextView
            android:text="@string/id_forgotPasswordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id_forgotPasswordButton" android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/id_loginButton"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/id_signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id_signUpButton" android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/id_forgotPasswordButton" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/id_backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id_backButton" android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/id_signUpButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
</android.support.constraint.ConstraintLayout>