<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:id="@+id/id_checkedOutContainer"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content"
                                             android:background="@android:drawable/dialog_holo_light_frame"
                                             android:paddingBottom="8dp">


    <ImageView
            android:id="@+id/id_bookImage"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/user_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars"/>

    <TextView
            android:id="@+id/id_borrowerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/id_accountInfoFirstNameText"
            android:textAlignment="textStart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/id_borrowerTitle"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/id_borrowerTitle"
            app:layout_constraintTop_toBottomOf="@+id/id_borrowerTitle"/>

    <TextView
            android:id="@+id/id_borrowerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/borrower"
            android:textAlignment="textStart"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/id_bookImage"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/id_bookImage"
            app:layout_constraintTop_toBottomOf="@+id/id_bookImage"/>

    <TextView
            android:id="@+id/id_bookTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/book_title"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/id_bookImage"
            app:layout_constraintTop_toTopOf="@+id/id_bookImage"/>

    <TextView
            android:id="@+id/id_bookAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author"
            app:layout_constraintEnd_toEndOf="@+id/id_bookTitle"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/id_bookTitle"
            app:layout_constraintTop_toBottomOf="@+id/id_bookTitle"/>

    <TextView
            android:id="@+id/id_historyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/id_bookAuthor"
            app:layout_constraintTop_toBottomOf="@+id/id_bookAuthor" android:layout_marginTop="4dp"/>

    <TextView
            android:id="@+id/id_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            app:layout_constraintStart_toStartOf="@+id/id_historyTitle"
            app:layout_constraintTop_toBottomOf="@+id/id_historyTitle"/>
    <Button
            android:text="@string/confirm_returned"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id_confirmReturnButton"
            app:layout_constraintTop_toTopOf="@+id/id_historyTitle" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="4dp" android:layout_marginTop="36dp"/>

</android.support.constraint.ConstraintLayout>