<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ForgotPasswordActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id_forgotPasswordText" android:layout_marginTop="50dp"
            app:layout_constraintTop_toTopOf="parent" android:textSize="24sp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:text="@string/id_forgotPasswordButton"/>
    <TextView
            android:text="@string/id_resetPasswordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id_resetPasswordText" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/id_forgotPasswordText"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:textSize="18sp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/id_forgotPasswordEmail" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/id_resetPasswordText" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/hint_email"/>
    <Button
            android:text="@string/id_resetPasswordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id_resetPasswordButton" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/id_forgotPasswordEmail"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="90dp"
    />
    <Button
            android:text="@string/id_cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id_cancelResetPasswordButton" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/id_forgotPasswordEmail" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="80dp" app:layout_constraintStart_toEndOf="@+id/id_resetPasswordButton"
    />
</android.support.constraint.ConstraintLayout>