<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/id_containerRow"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:drawable/dialog_holo_light_frame"
    android:paddingBottom="8dp">

    <Button
            android:id="@+id/id_checkoutButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:background="@null"
            android:elevation="5dp"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/check_out"
            android:textColor="@color/colorGreen"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/id_lenderName" android:layout_marginStart="36dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/id_status"
            app:layout_constraintVertical_bias="0.0"/>

    <ImageView
        android:id="@+id/id_bookImage"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/user_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/id_lenderName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/id_accountInfoFirstNameText"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/id_borrowerTitle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/id_borrowerTitle"
        app:layout_constraintTop_toBottomOf="@+id/id_borrowerTitle" />

    <TextView
        android:id="@+id/id_borrowerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/lender"
        android:textAlignment="textStart"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/id_bookImage"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/id_bookImage"
        app:layout_constraintTop_toBottomOf="@+id/id_bookImage" />

    <TextView
            android:id="@+id/id_bookTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/book_title"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/id_bookImage"
            app:layout_constraintTop_toTopOf="@+id/id_bookImage"/>

    <TextView
        android:id="@+id/id_bookAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author"
        app:layout_constraintEnd_toEndOf="@+id/id_bookTitle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/id_bookTitle"
        app:layout_constraintTop_toBottomOf="@+id/id_bookTitle" />

    <TextView
        android:id="@+id/id_requestTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/id_bookAuthor"
        app:layout_constraintTop_toBottomOf="@+id/id_bookAuthor" />

    <TextView
        android:id="@+id/id_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        app:layout_constraintStart_toStartOf="@+id/id_requestTitle"
        app:layout_constraintTop_toBottomOf="@+id/id_requestTitle" />

    <ImageView
            android:id="@+id/id_checkedIcon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/accepted_icon"
            android:elevation="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.802"
            app:layout_constraintStart_toEndOf="@+id/id_bookTitle"
            app:layout_constraintTop_toTopOf="@+id/id_bookTitle"
            app:srcCompat="@drawable/ic_check_circle_green_24dp"/>
    <ImageView
            android:layout_width="73dp"
            android:layout_height="50dp" app:srcCompat="@drawable/ic_perm_phone_msg_black_24dp"
            android:id="@+id/id_phoneIcon" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/id_checkoutButton"
            android:layout_marginStart="8dp" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/id_checkedIcon" app:layout_constraintHorizontal_bias="0.727"
            android:scaleX="-1"/>

</android.support.constraint.ConstraintLayout>