<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="5dp"
    >

    <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/corn_font"
            android:text="@string/add"
            android:textAlignment="center"
            android:textColor="@color/colorDarkPurp"
            android:textSize="18sp"
            android:transitionName="@string/add_book_transition"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"/>

    <EditText
            android:id="@+id/id_bookTitle"
            android:layout_width="254dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:fontFamily="@font/quicksand"
            android:hint="@string/title"
            android:inputType="textPersonName"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/id_currentDate" app:layout_constraintHorizontal_bias="0.505"/>

    <EditText
            android:id="@+id/id_bookAuthor"
            android:layout_width="254dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:fontFamily="@font/quicksand"
            android:hint="@string/author"
            android:inputType="textPersonName"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/id_bookTitle"
            app:layout_constraintStart_toStartOf="@+id/id_bookTitle"
            app:layout_constraintHorizontal_bias="0.494" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/id_bookTitle"/>
    <EditText
            android:id="@+id/id_bookDescription"
            android:layout_width="254dp"
            android:layout_height="155dp"
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:fontFamily="@font/quicksand"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/id_bookAuthor"
            app:layout_constraintStart_toStartOf="@+id/id_bookAuthor"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/id_bookAuthor"/>

    <Button
            android:id="@+id/id_submitButton"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:background="@drawable/button_corner"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/submit"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            app:layout_constraintEnd_toEndOf="@+id/id_bookDescription"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/id_bookDescription"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/id_categorySpinner"/>

    <Spinner
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:id="@+id/id_categorySpinner" app:layout_constraintStart_toStartOf="@+id/id_bookDescription"
            app:layout_constraintEnd_toEndOf="@+id/id_bookDescription" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/id_bookDescription" app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:id="@+id/id_currentDate"
            app:layout_constraintStart_toStartOf="@+id/id_bookTitle"
            app:layout_constraintEnd_toEndOf="@+id/id_bookTitle" android:fontFamily="@font/quicksand_light"
            android:textSize="12sp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:textAlignment="center"/>
</android.support.constraint.ConstraintLayout>